# perception-stereo

./: CMakeLists.txt  manifest.xml
src/: CMakeLists.txt  Types.h  calibrationparameters.cpp  calibrationparameters.h  config.h.in  configuration.cpp  configuration.h  dense_stereo_types.cpp  dense_stereo_types.h  densestereo.cpp  densestereo.h  elas.cpp  elas.h  filter.h  homography.cpp  homography.h  image.h  imageprocessing.cpp  imageprocessing.h  main.cpp  matrix.cpp  matrix.h  psurf.cpp  psurf.h  ransac.cpp  ransac.hpp  sparse_stereo.cpp  sparse_stereo.hpp  sparse_stereo_types.h  store_vector.hpp
src/ransac/: CMakeLists.txt  icpSolver.h  ransac.h  test.cpp
test/: CMakeLists.txt  calib.txt  calib1.txt  dense_stereo.cpp  undistort.cpp  unit.cpp
viz/: CMakeLists.txt  DistanceImageVisualization.cpp  DistanceImageVisualization.hpp  dense_stereo-viz.pc.in  vizkit_plugin.rb
